--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/simages.PNG" class="logo" alt="Logo"> 
+                <img src="images\simages.PNG" class="logo" alt="Logo"> 
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/about2.PNG" alt="Sai Sruthi">
+                    <img src="images\about2.PNG" alt="Sai Sruthi">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -120,7 +120,7 @@
                         <a href=""><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/sai-sruthi-69b201276/"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
-                        <a href="images/My Resume.PDF" download class="btn btn2">Download Resume</a>
+                        <a href="images\My Resume.PDF" download class="btn btn2">Download Resume</a>
                         </div>
                     <div class="contact-right">
                         <form name="submit-to-google-sheet">
